ADD_CUSTOM_COMMAND(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/Parser.cpp" "${CMAKE_CURRENT_BINARY_DIR}/Parser.h"
    COMMAND ${LEMON_EXECUTABLE} Parser.y | cat
    COMMAND ${CMD_MV} Parser.c "${CMAKE_CURRENT_BINARY_DIR}/Parser.cpp"
    COMMAND ${CMD_MV} Parser.h "${CMAKE_CURRENT_BINARY_DIR}/Parser.h"
    COMMAND ${CMD_RM} Parser.out
    MAIN_DEPENDENCY Parser.y
    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
    )

ADD_CUSTOM_COMMAND(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/Lexer.cpp" "${CMAKE_CURRENT_BINARY_DIR}/Lexer.h"
    COMMAND "${FLEX_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/Lexer.l"
    MAIN_DEPENDENCY Lexer.l
    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
    )

INCLUDE_DIRECTORIES(".")
ADD_LIBRARY(Parser STATIC "${CMAKE_CURRENT_BINARY_DIR}/Parser.cpp" "${CMAKE_CURRENT_BINARY_DIR}/Lexer.cpp")

